static/css/calculator.css
.bold-weight {
  font-weight: bold;
  background-color: var(--highlight); 
}

/* Apply styles for the calculator input fields and dropdown */
#calculator input,
#calculator select {
  position: relative;
  font-size: 1em;
  padding: 10px;
  border: 1px solid var(--secondary);
  border-radius: var(--radius);
  background-color: var(--entry); /* Match background color to theme */
  color: var(--content); /* Ensure text is readable */
  cursor: pointer;
  outline: none;
  margin-bottom: 10px;
  width: 100%;
}

/* Hover effect for inputs */
#calculator input:hover,
#calculator select:hover {
  background-color: var(--border); /* Hover with a slightly darker background */
}

/* Style the dropdown options */
#calculator select option {
  background-color: var(--code-bg); /* Background color for options */
  color: var(--content); /* Text color for the options */
  cursor: pointer;
  outline: none;
  border-radius: var(--radius);
}

/* Hover effect for dropdown options */
#calculator select option:hover {
  background-color: var(--primary);
  color: var(--content);
}

/* Style the button */
/* Style the calculate button to match the Papermod tag style */
#calculator button {
  padding: 8px 20px;
  border-radius: var(--radius); /* Rounded corners */
  background-color: var(--accent); /* Matching background color like tags */
  color: var(--content); /* Text color */
  border: 1px solid var(--secondary); /* Border color */
  cursor: pointer;
  font-size: 1em;
  text-align: center;
  display: inline-block;
  margin-top: 20px;
  transition: background-color 0.3s ease, border-color 0.3s ease;
}

/* Hover effect for the button */
#calculator button:hover {
  background-color: var(--primary); /* On hover, change the background */
  border-color: var(--primary); /* On hover, adjust the border color */
}

/* Focus effect for the button */
#calculator button:focus {
  outline: none;
  box-shadow: 0 0 3px var(--primary); /* Add a glow when focused */
}

/* Style the results table */
#resultsTable {
  width: 100%;
  margin-top: 20px;
  border-collapse: collapse;
}

#resultsTable th,
#resultsTable td {
  padding: 10px;
  text-align: center;
  border: 1px solid var(--secondary);
}

#resultsTable th {
  background-color: var(--border);
}

#resultsTable td {
  background-color: var(--entry);
}

#resultsTable tr:hover td {
  background-color: var(--primary); /* Hover effect on rows */
}

/* Adjust for small screen sizes */
@media screen and (max-width: 768px) {
  #calculator {
    width: 100%;
  }

  #calculator input,
  #calculator select,
  #calculator button {
    font-size: 0.9em;
  }
}

.progression-caption {
  font-size: 14px;
  text-align: center;
  color: var(--primary);  /* Adjust to your theme */
}

